--- a/calmify-frontend/package.json
+++ b/calmify-frontend/package.json
@@ -10,6 +10,7 @@
     "chakra-ui-steps": "^2.1.0",
     "firebase": "^10.13.1",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
