--- a/calmify-frontend/package.json
+++ b/calmify-frontend/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "chakra-ui-steps": "^2.1.0",
     "firebase": "^10.13.1",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
