--- a/calmify-frontend/package.json
+++ b/calmify-frontend/package.json
@@ -19,7 +19,8 @@
     "react-scroll": "^1.9.0",
     "react-youtube": "^10.1.0",
     "styled-components": "^6.1.12",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
   },
   "scripts": {
     "start": "react-scripts start",
