--- a/calmify-frontend/package.json
+++ b/calmify-frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chakra-ui-steps": "^2.1.0",
     "firebase": "^10.13.1",
+    "caniuse-lite": "^1.0.30001699",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
