--- a/calmify-frontend/package.json
+++ b/calmify-frontend/package.json
@@ -4,16 +4,20 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "^2.10.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "caniuse-lite": "^1.0.30001699",
     "chakra-ui-steps": "^2.1.0",
     "firebase": "^10.13.1",
-    "caniuse-lite": "^1.0.30001699",
+    "framer-motion": "^12.4.3",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.0",
